--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>eureka-consumer</module>
         <module>eureka-consumer-ribbon</module>
         <module>eureka-consumer-feign</module>
+        <module>config-server</module>
     </modules>
 
     <properties>
