--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>eureka-consumer-ribbon</module>
         <module>eureka-consumer-feign</module>
         <module>config-server</module>
+        <module>config-client</module>
     </modules>
 
     <properties>
